--- a/common/.config/taskfiles/upstream/Taskfile.yml
+++ b/common/.config/taskfiles/upstream/Taskfile.yml
@@ -7,6 +7,7 @@ tasks:
       - task: :upstream:common:clone
       - task: :upstream:common:copy
       - task: :upstream:common:merge-and-template
+      - task: :upstream:common:clean
       - task: :fix:eslint
 
   project:
