--- a/common/.gitlab-ci.yml
+++ b/common/.gitlab-ci.yml
@@ -8,6 +8,6 @@ include:
   - local: .gitlab/ci/lint/gitlab-ci-lint.gitlab-ci.yml
   - local: .gitlab/ci/lint/prettier.gitlab-ci.yml
   - local: .gitlab/ci/lint/shellcheck.gitlab-ci.yml
-  - local: .gitlab/ci/yamllint.gitlab-ci.yml
+  - local: .gitlab/ci/lint/yamllint.gitlab-ci.yml
   - local: .gitlab/ci/propagate/propagate-groups.gitlab-ci.yml
-  - local: .gitlab/ci/update/update-common.gitlab-ci.yml
+  - local: .gitlab/ci/update/common.gitlab-ci.yml
