--- a/common/.config/taskfiles/upstream/Taskfile-common.yml
+++ b/common/.config/taskfiles/upstream/Taskfile-common.yml
@@ -107,6 +107,8 @@ tasks:
           # Merge the files
           echo "1111 $1"
           echo "2222 $2"
+          KEYWORDS="$(jq -r '.keywords[]' "$1" "$2" | jq -s '. | unique')"
+          echo "$KEYWORDS"
           jq --arg keywords "$(jq -r '.keywords[]' "$1" "$2" | jq -s '. | unique')" -s -S '.[0] * .[1] | .keywords = $keywords | .' "$1" "$2" > "$3"
         }
 
