--- a/common/.config/taskfiles/upstream/Taskfile-common.yml
+++ b/common/.config/taskfiles/upstream/Taskfile-common.yml
@@ -30,7 +30,7 @@ tasks:
     deps:
       - copy:common
       - copy:project
-      - copy:subtype
+      - copy:project:subtype
 
   copy:common:
     cmds:
