--- a/common/.config/taskfiles/upstream/Taskfile-common.yml
+++ b/common/.config/taskfiles/upstream/Taskfile-common.yml
@@ -48,8 +48,9 @@ tasks:
       - |
         for FOLDER in project-*/; do
           SUBTYPE="$(echo "$FOLDER" | sed 's/project-\(.*\)\//\1/')"
-          cp -rT "$FOLDER" "common-$SUBTYPE"
+          cp -rT "$FOLDER" "common-$SUBTYPE" &
         done
+        wait
 
   merge:
     deps:
