--- a/common/.config/taskfiles/upstream/Taskfile-common.yml
+++ b/common/.config/taskfiles/upstream/Taskfile-common.yml
@@ -2,6 +2,7 @@
 version: '3'
 
 vars:
+  COMMON_FOLDER: .common
   DOCS_URL: https://gitlab.com/megabyte-labs/documentation/{{.REPOSITORY_SUBTYPE}}
   SHARED_COMMON_URL: https://gitlab.com/megabyte-labs/common/shared.git
   SHARED_FOLDER: .shared
@@ -21,8 +22,8 @@ tasks:
 
   clone:docs:
     cmds:
-      - rm -rf common/.config/docs
       - mkdir -p {{.SHARED_FOLDER}}/common/.config
+      - rm -rf {{.SHARED_FOLDER}}/.config/docs
       - git clone --depth=1 {{.DOCS_URL}} {{.SHARED_FOLDER}}/common/.config/docs
       - rm -rf {{.SHARED_FOLDER}}/common/.config/docs/.git
 
@@ -39,16 +40,16 @@ tasks:
 
   copy:project:
     cmds:
-      - cp -rT {{.SHARED_FOLDER}}/common common
+      - cp -rT {{.SHARED_FOLDER}}/common {{.COMMON_FOLDER}}
       - if [ ! -d project ]; then mkdir project; fi
-      - cp -rT project common
+      - cp -rT project {{.COMMON_FOLDER}}
 
   copy:project:subtype:
     cmds:
       - |
         for FOLDER in project-*/; do
           SUBTYPE="$(echo "$FOLDER" | sed 's/project-\(.*\)\//\1/')"
-          cp -rT "$FOLDER" "common-$SUBTYPE" &
+          cp -rT "$FOLDER" "{{.COMMON_FOLDER}}-$SUBTYPE" &
         done
         wait
 
@@ -86,7 +87,7 @@ tasks:
           mv "$TMP" "$3"
         }
 
-        mergePackages "{{.SHARED_FOLDER}}/common/package.hbs.json" "project/package.hbs.json" "common/package.hbs.json"
+        mergePackages "{{.SHARED_FOLDER}}/common/package.hbs.json" "project/package.hbs.json" "{{.COMMON_FOLDER}}/package.hbs.json"
 
   merge:package:project:subtype:
     deps:
@@ -116,7 +117,7 @@ tasks:
         for FOLDER in project-*/; do
           echo "$FOLDER"
           SUBTYPE="$(echo "$FOLDER" | sed 's/project-\(.*\)\//\1/')"
-          mergePackages "common/package.hbs.json" "project-$SUBTYPE/package.hbs.json" "common-$SUBTYPE/package.hbs.json" &
+          mergePackages "{{.COMMON_FOLDER}}/package.hbs.json" "project-$SUBTYPE/package.hbs.json" "{{.COMMON_FOLDER}}-$SUBTYPE/package.hbs.json" &
         done
         wait
 
@@ -135,9 +136,9 @@ tasks:
     cmds:
       - |
         if [ -f "project/.config/variables.json" ]; then
-          jq -s -S '.[0] * .[1]' "common/.config/docs/variables.json" "project/.config/variables.json" > "common/.config/variables.json"
+          jq -s -S '.[0] * .[1]' "{{.COMMON_FOLDER}}/.config/docs/variables.json" "project/.config/variables.json" > "{{.COMMON_FOLDER}}/.config/variables.json"
         else
-          cp common/.config/docs/variables.json common/.config/variables.json
+          cp {{.COMMON_FOLDER}}/.config/docs/variables.json {{.COMMON_FOLDER}}/.config/variables.json
         fi
 
   merge:variables:project:subtype:
@@ -158,12 +159,12 @@ tasks:
         function handleSubtype() {
           FOLDER="$1"
           SUBTYPE="$(echo "$FOLDER" | sed 's/project-\(.*\)\//\1/')"
-          mkdir -p "common-$SUBTYPE/.config"
-          jq --arg group "$GROUP" --arg subtype "$SUBTYPE" '.subgroup = $subtype | .group = $group' common/.config/variables.json > "$TMP"
+          mkdir -p "{{.COMMON_FOLDER}}-$SUBTYPE/.config"
+          jq --arg group "$GROUP" --arg subtype "$SUBTYPE" '.subgroup = $subtype | .group = $group' {{.COMMON_FOLDER}}/.config/variables.json > "$TMP"
           if [ -f "project-$SUBTYPE/.config/variables.json" ]; then
-            jq -s -S '.[0] * .[1]' "$TMP" "project-$SUBTYPE/.config/variables.json" > "common-$SUBTYPE/.config/variables.json"
+            jq -s -S '.[0] * .[1]' "$TMP" "project-$SUBTYPE/.config/variables.json" > "{{.COMMON_FOLDER}}-$SUBTYPE/.config/variables.json"
           else
-            mv "$TMP" "common-$SUBTYPE/.config/variables.json"
+            mv "$TMP" "{{.COMMON_FOLDER}}-$SUBTYPE/.config/variables.json"
           fi
         }
         for FOLDER in project-*/; do
@@ -196,7 +197,7 @@ tasks:
           hbs --data .variables.json --helper ./.config/hbs.cjs "$FILE" --stdout > "${FILE//.hbs}"
           rm "$FILE"
         }
-        find . -type f -not \( -path './common*' -o -path './project*' \) -prune -name '*.hbs.*' | while read FILE; do
+        find . -type f -not \( -path './{{.COMMON_FOLDER}}*' -o -path './project*' \) -prune -name '*.hbs.*' | while read FILE; do
           handlebars "$FILE" &
         done
         wait
@@ -220,7 +221,7 @@ tasks:
           hbs --data .variables.json --helper ./.config/hbs.cjs "$FILE" --stdout > "${FILE%.*}"
           rm "$FILE"
         }
-        find . -type f -not \( -path './common*' -o -path './project*' \) -prune -name '*.handlebars' | while read FILE; do
+        find . -type f -not \( -path './{{.COMMON_FOLDER}}*' -o -path './project*' \) -prune -name '*.handlebars' | while read FILE; do
           handlebars "$FILE" &
         done
         wait
@@ -231,4 +232,4 @@ tasks:
     cmds:
       - jq --arg blueprint "$(jq -r '.blueprint' package.json | sed 's/^null$/{}/')"
         --arg version "$(jq -r '.version' package.json | sed 's/^null$/0.0.1/')"
-        -S '. = (. * ($blueprint | fromjson))' common/.config/docs/variables.json > .variables.json
+        -S '. = (. * ($blueprint | fromjson))' {{.COMMON_FOLDER}}/.config/docs/variables.json > .variables.json
