--- a/common/.config/taskfiles/upstream/Taskfile-common.yml
+++ b/common/.config/taskfiles/upstream/Taskfile-common.yml
@@ -16,16 +16,16 @@ tasks:
 
   clone:common:
     cmds:
-      - rm -rf {{.SHARED_FOLDER}}
-      - git clone --depth=1 {{.SHARED_COMMON_URL}} {{.SHARED_FOLDER}}
-      - rm -rf {{.SHARED_FOLDER}}/.git
+      - rm -rf ./{{.SHARED_FOLDER}}
+      - git clone --depth=1 ./{{.SHARED_COMMON_URL}} ./{{.SHARED_FOLDER}}
+      - rm -rf ./{{.SHARED_FOLDER}}/.git
 
   clone:docs:
     cmds:
-      - mkdir -p {{.SHARED_FOLDER}}/common/.config
-      - rm -rf {{.SHARED_FOLDER}}/.config/docs
-      - git clone --depth=1 {{.DOCS_URL}} {{.SHARED_FOLDER}}/common/.config/docs
-      - rm -rf {{.SHARED_FOLDER}}/common/.config/docs/.git
+      - mkdir -p ./{{.SHARED_FOLDER}}/common/.config
+      - rm -rf ./{{.SHARED_FOLDER}}/.config/docs
+      - git clone --depth=1 {{.DOCS_URL}} ./{{.SHARED_FOLDER}}/common/.config/docs
+      - rm -rf ./{{.SHARED_FOLDER}}/common/.config/docs/.git
 
   copy:
     deps:
@@ -35,21 +35,21 @@ tasks:
 
   copy:common:
     cmds:
-      - cp -rT {{.SHARED_FOLDER}}/common/ .
+      - cp -rT ./{{.SHARED_FOLDER}}/common/ .
       - task: :common:husky:permissions
 
   copy:project:
     cmds:
-      - cp -rT {{.SHARED_FOLDER}}/common {{.COMMON_FOLDER}}
+      - cp -rT ./{{.SHARED_FOLDER}}/common ./{{.COMMON_FOLDER}}
       - if [ ! -d project ]; then mkdir project; fi
-      - cp -rT project {{.COMMON_FOLDER}}
+      - cp -rT project ./{{.COMMON_FOLDER}}
 
   copy:project:subtype:
     cmds:
       - |
         for FOLDER in project-*/; do
           SUBTYPE="$(echo "$FOLDER" | sed 's/project-\(.*\)\//\1/')"
-          cp -rT "$FOLDER" "{{.COMMON_FOLDER}}-$SUBTYPE" &
+          cp -rT "$FOLDER" "./{{.COMMON_FOLDER}}-$SUBTYPE" &
         done
         wait
 
@@ -87,7 +87,7 @@ tasks:
           mv "$TMP" "$3"
         }
 
-        mergePackages "{{.SHARED_FOLDER}}/common/package.hbs.json" "project/package.hbs.json" "{{.COMMON_FOLDER}}/package.hbs.json"
+        mergePackages "./{{.SHARED_FOLDER}}/common/package.hbs.json" "./project/package.hbs.json" "./{{.COMMON_FOLDER}}/package.hbs.json"
 
   merge:package:project:subtype:
     deps:
@@ -115,7 +115,7 @@ tasks:
 
         for FOLDER in project-*/; do
           SUBTYPE="$(echo "$FOLDER" | sed 's/project-\(.*\)\//\1/')"
-          mergePackages "{{.COMMON_FOLDER}}/package.hbs.json" "project-$SUBTYPE/package.hbs.json" "{{.COMMON_FOLDER}}-$SUBTYPE/package.hbs.json" &
+          mergePackages "./{{.COMMON_FOLDER}}/package.hbs.json" "project-$SUBTYPE/package.hbs.json" "./{{.COMMON_FOLDER}}-$SUBTYPE/package.hbs.json" &
         done
         wait
 
@@ -134,9 +134,9 @@ tasks:
     cmds:
       - |
         if [ -f "project/.config/variables.json" ]; then
-          jq -s -S '.[0] * .[1]' "{{.COMMON_FOLDER}}/.config/docs/variables.json" "project/.config/variables.json" > "{{.COMMON_FOLDER}}/.config/variables.json"
+          jq -s -S '.[0] * .[1]' "./{{.COMMON_FOLDER}}/.config/docs/variables.json" "project/.config/variables.json" > "./{{.COMMON_FOLDER}}/.config/variables.json"
         else
-          cp {{.COMMON_FOLDER}}/.config/docs/variables.json {{.COMMON_FOLDER}}/.config/variables.json
+          cp ./{{.COMMON_FOLDER}}/.config/docs/variables.json ./{{.COMMON_FOLDER}}/.config/variables.json
         fi
 
   merge:variables:project:subtype:
@@ -157,12 +157,12 @@ tasks:
         function handleSubtype() {
           FOLDER="$1"
           SUBTYPE="$(echo "$FOLDER" | sed 's/project-\(.*\)\//\1/')"
-          mkdir -p "{{.COMMON_FOLDER}}-$SUBTYPE/.config"
-          jq --arg group "$GROUP" --arg subtype "$SUBTYPE" '.subgroup = $subtype | .group = $group | .' {{.COMMON_FOLDER}}/.config/variables.json > "$TMP"
+          mkdir -p "./{{.COMMON_FOLDER}}-$SUBTYPE/.config"
+          jq --arg group "$GROUP" --arg subtype "$SUBTYPE" '.subgroup = $subtype | .group = $group | .' ./{{.COMMON_FOLDER}}/.config/variables.json > "$TMP"
           if [ -f "project-$SUBTYPE/.config/variables.json" ]; then
-            jq -s -S '.[0] * .[1]' "$TMP" "project-$SUBTYPE/.config/variables.json" > "{{.COMMON_FOLDER}}-$SUBTYPE/.config/variables.json"
+            jq -s -S '.[0] * .[1]' "$TMP" "project-$SUBTYPE/.config/variables.json" > "./{{.COMMON_FOLDER}}-$SUBTYPE/.config/variables.json"
           else
-            mv "$TMP" "{{.COMMON_FOLDER}}-$SUBTYPE/.config/variables.json"
+            mv "$TMP" "./{{.COMMON_FOLDER}}-$SUBTYPE/.config/variables.json"
           fi
         }
         for FOLDER in project-*/; do
@@ -224,4 +224,4 @@ tasks:
     cmds:
       - jq --arg blueprint "$(jq -r '.blueprint' package.json | sed 's/^null$/{}/')"
         --arg version "$(jq -r '.version' package.json | sed 's/^null$/0.0.1/')"
-        -S '. = (. * ($blueprint | fromjson))' {{.COMMON_FOLDER}}/.config/docs/variables.json > .variables.json
+        -S '. = (. * ($blueprint | fromjson))' ./{{.COMMON_FOLDER}}/.config/docs/variables.json > ./.variables.json
