--- a/.gitlab/ci/lint/shellcheck.gitlab-ci.yml
+++ b/.gitlab/ci/lint/shellcheck.gitlab-ci.yml
@@ -8,7 +8,7 @@ shellcheck:
     GIT_DEPTH: 1
   script:
     - set -eo pipefail
-    - apt install jq
+    - apk add jq
     - printenv
     - |
       if (find . -type d \( -name .cache -o -name .git -o -name .modules  -o -name node_modules -o -name .husky \) -prune -o -type f \( -name \*.sh -o -name \*.sh.j2 \) -exec shellcheck -f json1 {} \+ > results.json); then
